Google AI Gemini: cleanup, added supportedCapabilities